# vidreview

./: .gitignore  README.md
video-processor-api/: Dockerfile  fly.toml  pyproject.toml  requirements.txt  upload_response.json
video-processor-api/app/: main.py  transcription.py
video-processor-ui/: index.html  package-lock.json  package.json
video-processor-ui/src/: App.tsx  types.ts
video-processor-ui/src/components/: VideoPlayer.tsx  VideoUploader.tsx
